Fixed all CSS header Issues with alignment

--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -11,10 +11,11 @@
   }
 
   a {
-    color: white;
-    text-decoration: none;
+    color: #fff;
     font-weight: 300;
-    padding: 12px, 0;
+    text-decoration: none;
+    display: block;
+    padding: 12px 0;
   }
 
   &--pull-right {
